Исправлена ошибка запуска main файла. Запуск производить через задачу gradle: run